--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,27 @@
+#hd-upload-dialog {
+  position: absolute;
+  top: 100px;
+  left: 0;
+  width: 100%;
+  height: 800px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 100;
+}
+#hd-upload-dialog > div {
+  background-color: #FFF;
+  padding: 32px;
+  box-shadow: 5px 5px 5px rgba(0,0,0,0.2);
+}
+#hd-upload-dialog * {
+  font-family: "Arial", sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
 .screen_text {
   white-space: pre;
   font-size: 16px !important;
@@ -78,7 +102,7 @@ body #crt-switch:checked ~ .crt-container {
 body .crt-screen {
   background: black;
   display: flex;
-  flex-direction: center;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
 }
@@ -143,4 +167,5 @@ body {
   background-repeat: no-repeat;
   background-size: auto 1310px;
   height: 1310px;
+  position: relative;
 }
