Explicitly set body width

--- a/css/main.css
+++ b/css/main.css
@@ -167,5 +167,6 @@ body {
   background-repeat: no-repeat;
   background-size: auto 1310px;
   height: 1310px;
+  width: 1173px;
   position: relative;
 }
